tests/fixtures/invalid/none_lshift_int.py
# Cannot left shift None and Int
x: None = None << 1
